add table view and image exporter